--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "db:make-migration": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:make",
-    "db:migrate:down": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:down",
-    "db:migrate:latest": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:latest",
-    "db:migrate:list": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:list",
-    "db:migrate:rollback": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:rollback",
-    "db:migrate:up": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:up",
-    "db:seed": "dotenv -e ./.env.development -- ./node_modules/.bin/knex seed:run",
-    "db:seed:add_default_admins": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
-    "db:seed:add_dummy_consumers": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
-    "db:seed:add_dummy_contacts": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
-    "db:seed:add_dummy_exchange_rates": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
-    "db:seed:add_dummy_payment_methods": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
-    "db:seed:add_dummy_payment_requests": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
+    "db:make-migration": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:make",
+    "db:migrate:down": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:down",
+    "db:migrate:latest": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:latest",
+    "db:migrate:list": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:list",
+    "db:migrate:rollback": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:rollback",
+    "db:migrate:up": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex migrate:up",
+    "db:seed": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex seed:run",
+    "db:seed:add_default_admins": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
+    "db:seed:add_dummy_consumers": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
+    "db:seed:add_dummy_contacts": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
+    "db:seed:add_dummy_exchange_rates": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
+    "db:seed:add_dummy_payment_methods": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
+    "db:seed:add_dummy_payment_requests": "dotenv -e ./.env.development -- node -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "format": "prettier --write \"./{apps,libs,src}/**/*.{ts,js}\" ",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "dotenv -v NODE_OPTIONS=--max-old-space-size=4096 -v DEBUG=eslint:cli-engine eslint \"./{apps,libs,src}/**/*.{ts,js}\" --fix",
