--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
-    "@wirebill/pdf-generator-package": "^0.0.1276147011",
-    "@wirebill/shared-common": "^0.0.1276147011",
+    "@wirebill/pdf-generator-package": "^0.0.1322481904",
+    "@wirebill/shared-common": "^0.0.1322481904",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
@@ -160,5 +160,6 @@
   "engines": {
     "node": ">=20.11.1",
     "npm": ">=10.2.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
