--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "start:dev": "dotenv -e ./.env.development -- nest start --watch",
     "start:prod": "node dist/main",
     "start:vercel:dev": "cross-env NODE_ENV=development IS_ON_VERCEL=true nest start --watch",
-    "test": "dotenv -e ./.env.development -- jest",
+    "test": "dotenv -e ./.env.development -- jest --verbose",
     "test:cov": "dotenv -e ./.env.development -- jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e ./.env.development -- jest --config ./test/jest-e2e.json",
+    "test:e2e": "dotenv -e ./.env.development -- jest --config ./test/jest-e2e.json --verbose",
     "test:watch": "dotenv -e ./.env.development -- jest --watch",
     "pre-commit": "npx lint-staged",
     "type-check": "tsc --noEmit",
@@ -88,6 +88,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.567.0",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -95,8 +96,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/terminus": "^11.0.0",
     "@wirebill/pdf-generator-package": "^0.0.1322481904",
     "@wirebill/shared-common": "^0.0.1322481904",
+    "axios": "^1.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
@@ -149,7 +152,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
