--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,7 @@
       "@-/middleware/*": ["src/middleware/*"],
       "@-/repositories": ["src/repositories"],
       "@-/repositories/*": ["src/repositories/*"],
+      "@-/envs": ["src/envs"],
     }
   },
   "include": ["src", "typings", "knexfile.ts", "test"]
