--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,6 +20,8 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-turbo": "^2.5.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.3.0",
     "prettier": "^3.2.5",
     "typescript": "^5.8.2",
