--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -46,7 +46,8 @@
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.17",
     "dotenv": "^17.2.3",
-    "dotenv-cli": "^10.0.0"
+    "dotenv-cli": "^10.0.0",
+    "@remoola/env": "^0.0.0"
   },
   "peerDependencies": {
     "typeorm": "*"
