--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,4 +1,17 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", ".prettierrc.mjs", "eslint.config.mjs", "jest.config.mjs", "jest.config.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/generate-openapi.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist",
+    "**/*spec.ts",
+    ".prettierrc.mjs",
+    "eslint.config.mjs",
+    "jest.config.mjs",
+    "jest.config.ts"
+  ]
 }
