--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "include": [
-    "src/**/*.ts",
-    "src/generate-openapi.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
