--- a/package.json
+++ b/package.json
@@ -66,7 +66,18 @@
     "testEnvironment": "node",
     "testRegex": ".*\\.test\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s$": [
+        "ts-jest",
+        {
+          "isolatedModules": false
+        }
+      ]
+    },
+    "moduleNameMapper": {
+      "@wirebill/shared-common/(.*)": "<rootDir>/src/shared-common/$1",
+      "@wirebill/shared-common": "<rootDir>/src/shared-common",
+      "@wirebill/pdf-generator-package/(.*)": "<rootDir>/src/shared-common/pdf-generator-package/$1",
+      "@wirebill/pdf-generator-package": "<rootDir>/src/shared-common/pdf-generator-package"
     }
   },
   "dependencies": {
