--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,7 +20,6 @@
     "migrate:up2": "yarn build && yarn dev:envs typeorm migration:run -- -d ./dist/config/orm.config.js"
   },
   "dependencies": {
-    "@remoola/api-types": "^0.0.0",
     "@aws-sdk/client-s3": "^3.872.0",
     "@aws-sdk/s3-request-presigner": "^3.872.0",
     "@nestjs/bullmq": "^11.0.3",
@@ -30,13 +29,18 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@remoola/api-types": "^0.0.0",
+    "@remoola/env": "^0.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^10.0.0",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
@@ -46,10 +50,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^4.0.17",
-    "dotenv": "^17.2.3",
-    "dotenv-cli": "^10.0.0",
-    "@remoola/env": "^0.0.0"
+    "zod": "^4.0.17"
   },
   "peerDependencies": {
     "typeorm": "*"
@@ -65,7 +66,11 @@
     "@remoola/eslint-config": "^0.0.0",
     "@remoola/jest-config": "^0.0.0",
     "@remoola/typescript-config": "^0.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.17",
+    "@types/node": "^24.3.0",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -73,10 +78,6 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.8.2",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/node": "^24.3.0",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/supertest": "^6.0.2"
+    "typescript": "5.8.2"
   }
 }
